# scene-analysis-service

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: config.py  main.py
app/models/: schemas.py
app/routers/: analyze.py  describe.py  detect.py  health.py
app/services/: analyzer.py  describer.py  detector.py  device.py  embedder.py  hazards.py  triton_describer.py  triton_detector.py  triton_embedder.py
config/: config.yaml  hazards.yaml
tests/: conftest.py  test_analyzer.py  test_api.py  test_hazard_engine.py  test_schemas.py
