[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scene-analysis-service"
version = "0.1.0"
requires-python = ">=3.13"
description = "Fast scene analysis: object detection, structured description, and image embeddings."
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pyyaml>=6.0",
    "pillow>=11.0",
    "httpx>=0.28",
    "numpy>=2.1",
    "python-multipart>=0.0.18",
    "triton-shared",
    "tokenizers>=0.21",
]

[project.optional-dependencies]
# Triton gRPC client (required for inference_backend=triton).
triton = [
    "tritonclient[all]>=2.51.0",
]
# Legacy in-process inference stack (PyTorch-based).
# For running models without Triton. Includes YOLO, CLIP, Florence-2 deps.
# Prefer the Triton backends for production.
inference = [
    "ultralytics>=8.4",
    "transformers>=4.47",
    "timm>=1.0",
    "einops>=0.8",
    "open_clip_torch>=2.28",
    "torch>=2.5",
    "torchvision>=0.20",
]

[tool.uv.sources]
triton-shared = { path = "../triton-shared" }

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.8",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4"]
ignore = ["B008"]  # FastAPI Depends() calls in function defaults

[tool.ruff.lint.isort]
known-first-party = ["app"]
